Fix margins and alignments

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,14 @@
-*, html, body {
-    margin: 0;
-    padding: 0;
+*,
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .app-content {
-    margin: 0 10rem;
-    max-width: 850px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  max-width: 1400px;
 }
 
 @media only screen and (max-width: 900px) {
